# DiscordListManagementBot

./: .gitignore  README.md  WipeMeBabyOneMoreTime.db  binaryconv.py  feelings.py  keep_alive.py  keys.py  main.py  pyproject.toml  quotes.py  rp1.py
backups/: SimpleRollDB.lua  gdb_backup.txt
cogs/: 8ball.py  RAPI.py  animals.py  binaryconv.py  bot_replies.py  cats.py  cooling_rpi.py  discord_event_creator.py  dogs.py  food.py  git.py  guild_chat_del.py  guild_db.py  jokes.py  lcd.py  lrlul_cogs.py  minec.py  minesweeper.py  movie_quotes.py  music.py  pat.py  quotes.py  r-pi.py  rp1.py  space_images.py  spit.py  temp_conversion.py  test.py  ttt.py  watering_plants.py  weather.py
