[tool.poetry]
name = "repl_python3_DiscordListManagementBot"
version = "0.1.0"
description = ""
authors = ["Undeadko <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = ">=1.1.2, <2.0.0"
discord = "^1.0.1"
replit = "^3.0.0"
pythonping = "^1.0.16"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
